@@ -75,23 +75,23 @@ tar -xvf rivet-X.X.X.tar.gz</programlisting>
 	<substeps>
 	  <step>
 	    <para>
-	      On Linux or Unix systems, Rivet uses the standard <command>./configure ; make ; make install
-	      (; make install-packages)</command>
-	      sequence.
+	       On Linux or Unix systems, Rivet uses the standard <command>./configure ; make ; make install</command>
+	       sequence which installs to their target directories the Apache module, the binary libraries and the
+	       Tcl code
 	    </para>
 	    <para>
 	      There are several rivet specific options to configure that might be useful (or needed):
 	      <variablelist>
-		<varlistentry>
-		  <term>--with-tcl</term>
-		  <listitem>
-		    <para>
-		      This points to the directory where the
-		      <filename>tclConfig.sh</filename> file is located.
-		    </para>
-		  </listitem>
-		</varlistentry>
-		<varlistentry>
+		      <varlistentry>
+		      <term>--with-tcl</term>
+		      <listitem>
+		          <para>
+		              This points to the directory where the
+		              <filename>tclConfig.sh</filename> file is located.
+		          </para>
+		      </listitem>
+		  </varlistentry>
+		  <varlistentry>
 		  <term>--with-tclsh</term>
 		  <listitem>
 		    <para>This points to the location of the
